<resources>
    <string name="app_name">WordCatcher</string>
    <string name="start_game">Start Game</string>
    <string name="wrong">No match</string>
    <string name="correct">Match</string>
    <string name="timer">Timer</string>
    <string name="score">Score</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">Your score was:</string>
    <string name="try_again">Try again and beat your mark!</string>
    <string name="play_again">Play again</string>
    <string name="settings">Settings</string>
    <string name="zero">0</string>
    <string name="success">"Correct!"</string>
    <string name="failure">"Wrong"</string>
    <string name="start_message">"Let's go!"</string>
    <string name="desc">Image of the world with flags coming out.</string>
    <string name="finishing_screen">Finishing screen</string>
</resources>
